@@ -1,7 +1,6 @@
 import javax.swing.*;
 import java.awt.*;
-import javax.swing.text.AbstractDocument;
-import javax.swing.text.JTextComponent;
+import javax.swing.text.*;
 import javax.swing.undo.UndoManager;
 import javax.swing.undo.CannotUndoException;
 import javax.swing.undo.CannotRedoException;
@@ -9,9 +8,6 @@ import java.io.File;
 import java.io.IOException;
 import java.nio.file.Files;
 import java.nio.charset.StandardCharsets;
-import util.LanguageManager;
-import util.KeyStrokes;
-import menus.editMenu;
 
 public class TextEditor {
 
@@ -19,124 +15,128 @@ public class TextEditor {
     private UndoManager undoManager = new UndoManager();
     private File currentFile;
 
-
     public void init(JPanel editorPanel) {
 
         textComponent = new JTextPane();
 
-        ((AbstractDocument) textComponent.getDocument()).setDocumentFilter(new AutoBraceFilter());
+        ((AbstractDocument) textComponent.getDocument())
+                .setDocumentFilter(new AutoBraceFilter());
 
         textComponent.setBackground(new Color(30, 30, 30));
         textComponent.setForeground(new Color(218, 218, 218));
         textComponent.setCaretColor(Color.GRAY);
         textComponent.setFont(new Font("Consolas", Font.PLAIN, 17));
-        textComponent.setSelectionColor(new Color(40, 60, 40));     
-        textComponent.setSelectedTextColor(new Color(218, 218, 218));
+
         textComponent.getDocument().addUndoableEditListener(undoManager);
 
-        new SyntaxHighlighter(textComponent);
+        setupKeyBindings();
 
         JScrollPane scroll = new JScrollPane(textComponent);
         scroll.setBorder(null);
-        scroll.getViewport().setBackground(new Color(30, 30, 30));
-        scroll.setRowHeaderView(new LineNumberComponent(textComponent));
-
-        scroll.getVerticalScrollBar().setUI(new CustomScrollBarUI());
-        scroll.getHorizontalScrollBar().setUI(new CustomScrollBarUI());
-        scroll.getVerticalScrollBar().setPreferredSize(new Dimension(18, 0));
-        scroll.getHorizontalScrollBar().setPreferredSize(new Dimension(0, 18));
-        scroll.setCorner(JScrollPane.LOWER_RIGHT_CORNER, createDarkPanel());
-        scroll.setCorner(JScrollPane.LOWER_LEFT_CORNER, createDarkPanel());
-        scroll.setCorner(JScrollPane.UPPER_RIGHT_CORNER, createDarkPanel());
-
-
 
         editorPanel.setLayout(new BorderLayout());
         editorPanel.add(scroll, BorderLayout.CENTER);
-
-        JPopupMenu popup = new JPopupMenu();
-        menus.editMenu menu = new menus.editMenu();
-        menu.init(popup, textComponent, undoManager);
-
-        textComponent.setComponentPopupMenu(popup);
-
-
-        textComponent.addKeyListener(
-                    new KeyStrokes(
-                        () -> saveFile(),
-                        () -> {
-                            try { undoManager.undo(); }
-                            catch (Exception ex) { }
-                        },
-                        () -> {
-                            try { undoManager.redo(); }
-                            catch (Exception ex) { }
-                        }
-                    )
-                );
     }
 
+    private void setupKeyBindings() {
+
+        InputMap im = textComponent.getInputMap();
+        ActionMap am = textComponent.getActionMap();
+
+        // UNDO
+        im.put(KeyStroke.getKeyStroke("control Z"), "undo");
+        am.put("undo", new AbstractAction() {
+            @Override
+            public void actionPerformed(java.awt.event.ActionEvent e) {
+                try {
+                    if (undoManager.canUndo()) undoManager.undo();
+                } catch (CannotUndoException ex) {
+                    Toolkit.getDefaultToolkit().beep();
+                }
+            }
+        });
+
+        // REDO
+        im.put(KeyStroke.getKeyStroke("control Y"), "redo");
+        am.put("redo", new AbstractAction() {
+            @Override
+            public void actionPerformed(java.awt.event.ActionEvent e) {
+                try {
+                    if (undoManager.canRedo()) undoManager.redo();
+                } catch (CannotRedoException ex) {
+                    Toolkit.getDefaultToolkit().beep();
+                }
+            }
+        });
+
+        // SMART ENTER (AUTO BRACE IDEÁLIS HELYE)
+        im.put(KeyStroke.getKeyStroke("ENTER"), "smart-enter");
+
+        am.put("smart-enter", new AbstractAction() {
+            @Override
+            public void actionPerformed(java.awt.event.ActionEvent e) {
+                try {
+                    int pos = textComponent.getCaretPosition();
+                    Document doc = textComponent.getDocument();
+
+                    String text = doc.getText(0, doc.getLength());
+
+                    if (pos > 0 && text.charAt(pos - 1) == '{') {
+
+                        doc.insertString(pos, "\n    \n}", null);
+
+                        textComponent.setCaretPosition(pos + 5);
+
+                    } else {
+                        doc.insertString(pos, "\n", null);
+                    }
+
+                } catch (Exception ex) {
+                    ex.printStackTrace();
+                }
+            }
+        });
+    }
+
+    // FILE LOAD
     public void openFile(File file) {
         if (file == null || file.isDirectory()) return;
 
         try {
-            String content = new String(Files.readAllBytes(file.toPath()), StandardCharsets.UTF_8);
+            undoManager.discardAllEdits(); // 🔥 FONTOS
+
+            String content = Files.readString(file.toPath(), StandardCharsets.UTF_8);
+
             textComponent.setText(content);
             textComponent.setCaretPosition(0);
+
             currentFile = file;
+
         } catch (IOException ex) {
             ex.printStackTrace();
         }
     }
+
+    // SAVE
     public void saveFile() {
-            String saveerror = LanguageManager.get("Saving falied");
-            if (currentFile == null) return;
+        if (currentFile == null) return;
 
-            try {
-                if (!Files.exists(currentFile.toPath())) {
-                    if (messageHandler != null) {
-                        messageHandler.show(saveerror, saveerror);
-
-                    }
-                    return;
-                }
-                Files.write(
+        try {
+            Files.writeString(
                     currentFile.toPath(),
-                    textComponent.getText().getBytes(StandardCharsets.UTF_8)
-                );
-
-            } catch (IOException ex) {
-                ex.printStackTrace();
-            }
+                    textComponent.getText(),
+                    StandardCharsets.UTF_8
+            );
+        } catch (IOException ex) {
+            ex.printStackTrace();
         }
-
-    public File getCurrentFile() {
-        return currentFile;
     }
 
-    public interface MessageHandler {
-             void show(String title, String message);
+    public JTextPane getTextComponent() {
+        return textComponent;
     }
 
-    private MessageHandler messageHandler;
-
-    public void setMessageHandler(MessageHandler handler) {
-        this.messageHandler = handler;
+    public UndoManager getUndoManager() {
+        return undoManager;
     }
-
-    private JPanel createDarkPanel() {
-    JPanel p = new JPanel();
-    p.setBackground(new Color(30, 30, 30));
-    return p;
-    }
-
-        public JTextPane getTextComponent() {
-            return textComponent;
-        }
-
-        public UndoManager getUndoManager() {
-            return undoManager;
-        }
-
 }
-
